package doorstates;

//States that the door can be
@SuppressWarnings("checkstyle:MissingJavadocType")
public class States {
  static String LOCKED = "locked";
  static String UNLOCkED =  "unlocked";
  static String UNCLOKED_SHORTLY = "unlocked_shortly";
  static String PROPPED = "propped";
}
